<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:text="@string/login_in_home"
        app:layout_constraintEnd_toEndOf="@+id/AddATaskButton"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="@+id/AddATaskButton"
        app:layout_constraintTop_toBottomOf="@+id/AddATaskButton" />

    <TextView
        android:id="@+id/textView"
...
