...
    <string name="hello">Hello World</string>
    <string name="all_tasks">All Tasks</string>
    <string name="back">Back</string>
<!--    <string name="todo">TODO</string>-->
    <string name="task_three">Task Three</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_a_task">Add a Task</string>
    <!--    <string name="all_tasks">All Tasks</string>-->
    <string name="settings">Settings</string>
    <string name="task_two">Task Two</string>
    <string name="task_one">Task One</string>
    <!--    <string name="tasks">Tasks</string>-->
    <string name="img">img</string>
    <string name="add_task">Add Task</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <!--    <string name="add_task">Add Task</string>-->
    <string name="total_tasks_0">Total tasks: 0</string>
    <string name="assigned">assigned</string>
    <string name="home">home</string>
...
